# agentic-rag-kimble

./: .gitignore  .publish-guard-strict.local.example  .publish-guard.local.example  CLAUDE.md  README.md  op-refs.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run-secure-query.sh
docs/: EXPERIMENT-PLAN.md  EXPERIMENT-SCAFFOLD.md  EXPERIMENT.md  MIGRATIONS.md  PUBLISH-WORKFLOW.md  architecture.md  discussion.md  ontology.md  sample-cost-log.jsonl  spec.md
runs/experiment/: budget.yaml.example
scripts/: backfill-algorithm-families.sh  backfill-date-dimension.sh  backfill-dimension-attributes.sh  backfill-display-name.sh  backfill-openml-descriptions.sh  build-index.sh  check-secrets.sh  claude-p-locked.sh  cost-summary.py  experiment-control.sh  experiment-dashboard.py  experiment-mayor.sh  experiment-spawn-verifier.sh  experiment-spawn-worker.sh  experiment-tick.sh  ingest.sh  install-experiment-cron.sh  install-guards.sh  overnight-backfill.sh  preflight.sh  publish-guard-strict-scan.sh  rebuild-algorithm-table.sh  refresh-descriptions-and-reembed.sh  refresh-families-and-descriptions.sh  run-build.sh  run-eval.sh  semantic.sh  smoke-test.sh  spike-pass15-vec-e2e.py  uninstall-experiment-cron.sh
scripts/git-hooks/: pre-commit  pre-push
src/: config.py
src/agent/: cost_log.py  orchestrator.py  prompts.py
src/eval/: fixtures.py  judge.py  metrics.py
src/experiment/: __init__.py  budget.py  commit.py  observation.py  spawn.py  state.py  tick.py  tick_cli.py
src/graph/: db.py  queries.py  schema.py
src/retrieval/: tools.py  (+7 more)
tests/: conftest.py
(+32 files in other folders)
